@@ -41,6 +41,7 @@ Version 0.6.0~dev
 	* Force stereo layout for mpegps format.
 	* Support simple h264 transcode in ffmpeg worker.
 	* Support aac codec in ffmpeg worker.
+	* Add qt-faststart worker.
 
 Version 0.5.0 Released on 2012/03/29
 
